--- a/src/scss/screen.scss
+++ b/src/scss/screen.scss
@@ -52,7 +52,7 @@ body {
 #latest-commits-widget {
   border: 1px solid #cacaca;
   width: 500px;
-  height: 250px;
+  height: 200px;
   font: 13px helvetica, arial, freesans, clean, sans-serif;
   background: #dedede;
   a {
@@ -84,7 +84,7 @@ body {
 
 #latest-commits-widget ul#commit-history {
   overflow-y: auto;
-  height: 214px;
+  height: 164px;
   padding-left: 0;
   margin: 0;
   li {
@@ -121,14 +121,14 @@ body {
       }
     }
     .commit-avatar {
-      margin-top: 10px;
+      margin-top: 5px;
       height: 30px;
       width: 30px;
       border-radius: 4px;
       border: 1px solid #dedede;
     }
     .commit-author-info {
-      padding: 10px;
+      padding: 0px 10px 0px 10px;
       width: 85%;
     }
   }
