--- a/src/scss/screen.scss
+++ b/src/scss/screen.scss
@@ -54,7 +54,7 @@ body {
   width: 500px;
   height: 200px;
   font: 13px helvetica, arial, freesans, clean, sans-serif;
-  background: #dedede;
+  background: #e7e7e7;
   a {
     color: #4183c4;
     &:visited {
